[project]
name = "simple-lama-inpainting"
version = "0.1.2"
description = ""
authors = [{ name = "enesmsahin", email = "enessahin@outlook.com" }]
requires-python = "~=3.10.17"
readme = "README.md"
dependencies = [
    "fire>=0.5.0",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=9.5.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[project.scripts]
simple_lama = "simple_lama_inpainting.cli:lama_cli"

[tool.hatch.build.targets.sdist]
include = ["simple_lama_inpainting"]

[tool.hatch.build.targets.wheel]
include = ["simple_lama_inpainting"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.14.5",
]
